# cpp

docs/notes/: cmake.md  general.md
src/archives/: allocate.cpp  explicit.cpp  function_details.cpp  intro.cpp  loop.cpp  my_istream.cpp  pointer_to_func.cpp
src/archives/abstraction/object_lifecycle/: basics.cpp
src/archives/cmake/: CMakeLists.txt  main.cpp
src/archives/cmake/nested/: CMakeLists.txt
src/archives/cmake/nested/src/: CMakeLists.txt  good_morning.cpp
src/archives/cmake/nested/test/: CMakeLists.txt  main.cpp
src/archives/cmake/non_nested/: hello.cpp
src/archives/compile/: file1.cpp  file2.cpp
src/archives/compiler/: main.cpp
src/archives/compiler/separeted/: CMakeLists.txt  dc.hpp  error.cpp  lexer.cpp  main.cpp  parser.cpp  table.cpp
src/archives/compiler/separeted/include/: driver.hpp  error.hpp  lexer.hpp  parser.hpp  parser_impl.hpp  table.hpp
src/archives/compiler/separeted/main/: CMakeLists.txt  main.cpp
src/archives/compiler/separeted/src/: CmakeLists.txt  error.cpp  lexer.cpp  parser.cpp  table.cpp
src/archives/container_algorithm/: beautiful_algorithm.cpp  first_container.cpp  my_array.cpp  my_list.cpp  my_string.cpp  pair.cpp
src/archives/container_algorithm/pair/: pair2.cpp
src/archives/exception/: basics.cpp
src/archives/exception/assert/: assert.cpp
src/archives/exception/finally/: release_when_out_of_scope.cpp
src/archives/exception/result/: main.cpp
src/archives/exception/vector/: vector.cpp
src/archives/memory_and_resources/smart_pointers/: shared_ptr.cpp
src/archives/namespace/: main.cpp
src/archives/separate_compilation/: Vector.cpp  Vector.h  Vector.h.gch  Vector.hpp.gch  user.cpp
src/archives/std_libs/concurrency/: recursive_mutex.cpp  task.cpp
(+59 files in other folders)
